--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.5",
     "next-seo": "^6.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "schema-dts": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
